--- a/grid-implicito/index.html
+++ b/grid-implicito/index.html
@@ -12,9 +12,13 @@
         .container {
             display: grid;
             grid-template-columns: [inicio] 1fr [linea2] 1fr [linea3] 1fr [destacado-end] 1fr [linea5] 1fr [destacado2-end] 1fr [linea7] 1fr [final];
-            grid-template-rows: [inicio] 200px [inicio2] 200px [final];
+            /*grid-template-rows: [inicio] 200px [inicio2] 200px [final];*/
             grid-gap: 5px;
             height: 100vh;
+            /*grid-auto-flow: column;
+            grid-auto-columns: 50px 100px;*/
+            grid-auto-flow: row;
+            grid-auto-rows: 50px 100px;
         }
 
         .item {
@@ -41,7 +45,7 @@
         }
     </style>
 
-    <title>Tamaño de item en filas</title>
+    <title>Grid implicito</title>
 </head>
 <body>
     <section class="container">
@@ -50,6 +54,16 @@
         <div class="item">item #3</div>
         <div class="item">item #4</div>
         <div class="item">item #5</div>
+        <div class="item">item #6</div>
+        <div class="item">item #7</div>
+        <div class="item">item #8</div>
+        <div class="item">item #9</div>
+        <div class="item">item #9</div>
+        <div class="item">item #9</div>
+        <div class="item">item #9</div>
+        <div class="item">item #9</div>
+        <div class="item">item #9</div>
+        <div class="item">item #9</div>
     </section>
 </body>
 </html>
